--- a/index.css
+++ b/index.css
@@ -265,3 +265,17 @@ footer {
         font-size: 1.5rem;
     }
 }
+
+@media (hover: none) {
+    .project p {
+        display: block;
+    }
+
+    .project {
+        background-color: black;
+    }
+
+    .project img {
+        opacity: 0.2;
+    }
+}
