add conditions for showing project hover styles

--- a/index.css
+++ b/index.css
@@ -266,7 +266,7 @@ footer {
     }
 }
 
-@media (hover: none) {
+@media (hover: none), (pointer: none), (pointer: coarse) {
     .project p {
         display: block;
     }
