--- a/index.css
+++ b/index.css
@@ -158,7 +158,7 @@ header a {
     grid-column: 1 / span 3;
 }
 
-.project p {
+.project-description {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     text-align: center;
@@ -167,6 +167,18 @@ header a {
     display: none;
     line-height: 1.8;
     z-index: 5;
+}
+
+.project-caption {
+    grid-row: 3 / 4;
+    grid-column: 1 / span 3;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    display: none;
+    z-index: 5;
+    background-color: black;
+    padding: 0 0.2rem;
 }
 
 /* story section */
@@ -267,15 +279,7 @@ footer {
 }
 
 @media (hover: none), (pointer: none), (pointer: coarse) {
-    .project p {
+    .project-caption {
         display: block;
-    }
-
-    .project {
-        background-color: black;
-    }
-
-    .project img {
-        opacity: 0.2;
     }
 }
