--- a/index.css
+++ b/index.css
@@ -149,6 +149,7 @@ header a {
     justify-items: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 2rem;
+    background-color: black;
 }
 
 .project img {
@@ -156,6 +157,18 @@ header a {
     height: 100%;
     grid-row: 1 / span 3;
     grid-column: 1 / span 3;
+    opacity: 0.4;
+}
+
+.project h3 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    line-height: 1.8;
+    z-index: 5;
+    font-size: 1.8rem;
 }
 
 .project-description {
@@ -167,18 +180,6 @@ header a {
     display: none;
     line-height: 1.8;
     z-index: 5;
-}
-
-.project-caption {
-    grid-row: 3 / 4;
-    grid-column: 1 / span 3;
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    display: none;
-    z-index: 5;
-    background-color: black;
-    padding: 0 0.2rem;
 }
 
 /* story section */
@@ -275,11 +276,5 @@ footer {
 @media only screen and (max-width: 375px) {
     header a {
         font-size: 1.5rem;
-    }
-}
-
-@media (hover: none), (pointer: none), (pointer: coarse) {
-    .project-caption {
-        display: block;
     }
 }
