--- a/love_note/love-note.css
+++ b/love_note/love-note.css
@@ -1,20 +1,4 @@
-/* cross-region */
-
-html {
-    font-size: 16px;
-}
-
-body {
-    margin: 0;
-    font-family: 'JetBrains Mono', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
 /* header */
-header {
-    border-bottom: 1px solid black;
-    margin-bottom: 5rem;
-}
-
 .headerbox {
     margin: 1.5rem 8rem 1rem 1rem;
     display: flex;
@@ -33,10 +17,6 @@ header nav a {
     color: rgb(35,35,35);
     text-decoration: none;
     font-weight: bold;
-}
-
-header .icon {
-    margin-right: 0.75rem;
 }
 
 .punctuation {
@@ -83,43 +63,12 @@ h1 {
     line-height: 1.8;
 }
 
-/* button */
-button {
-    background-color: #F9322C;
-    color: white;
-    border: none;
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding: 1rem 2rem 1rem 2rem;
-    display: block;
-    margin: 0 auto;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #b31c16;
-}
-
+/* link */
 main a {
     display: block;
     text-align: center;
     color: #F9322C;
     margin-top: 3rem;
-}
-
-/* footer */
-footer {
-    color: rgb(86,84,84);
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-top: 1px solid #F9322C;
-    margin-top: 8rem;
-}
-
-.footerbox {
-    width: 90%;
-    margin: 0 auto;
 }
 
 /* media queries */
