--- a/index.css
+++ b/index.css
@@ -150,6 +150,18 @@ header a {
     z-index: 5;
 }
 
+.project:visited > img {
+    opacity: 0.4;
+}
+
+.project:visited > h3 {
+    display: block;
+}
+
+.project:visited > .project-description {
+    display: none;
+}
+
 .project:hover > img {
     opacity: 0.2;
     transition: 0.3s;
