--- a/index.css
+++ b/index.css
@@ -5,6 +5,16 @@ h2 {
     color: #F9322C;
 }
 
+h3 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1.5;
+    z-index: 5;
+    font-size: 1.5rem;
+}
+
 section {
     margin-top: 12rem;
 }
@@ -109,6 +119,17 @@ video {
     margin: 0 auto;
 }
 
+.projects-link {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.video-skills-demonstrated {
+    margin: 20px auto;
+    width: 60%;
+}
+
 .projects {
     display: flex;
     flex-wrap: wrap;
@@ -197,7 +218,7 @@ video {
     color: rgb(86, 84, 84);
 }
 
-.bullets a {
+.bullets a, .projects-section a {
     color: #F9322C;
 }
 
